public/scss/partials/_basic-style.scss
/* ... */
//styling of last paragraph in requirements class
//per our wireframe should be stand alone with leather background
//This does not want to expand to full width in large view - Not sure why width is behaving oddly
.requirements p:last-child {
  background-image: url(scss/assets/images/leather.jpg);
  height: 10em;
  width: 100%;
  padding: 1em 0 2em 1.5em;
  position: relative;
  margin: 1rem 0 -1.5em 0;
  border-top: solid 5px $color-4;
  a {
    color: black;
  }
}

footer {
  background-image: url(scss/assets/images/Background.png);
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  position: fixed;
  bottom: 0px;
  height: 2em;
  width: 100%;
  max-width: $display-max-width;
  padding: 0.5em 0 0.5em 0;
  font-size: 1rem;
  @include MQ(L) {
    font-size: 1.3rem;
  }
}
//****************************************** imported code from styleguide
.cd-logo {
  display: inline-block;
  height: 100%;
  position: relative;

  img {
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    @include transform(translateX(-50%) translateY(-50%));
  }

  @include MQ(L) {
    margin-left: 5%;
  }
}

.cd-nav-trigger {
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 50px;
  overflow: hidden;
  white-space: nowrap;
  color: transparent;

  span {
    position: absolute;
    height: 2px;
    width: 20px;
    top: 50%;
    margin-top: -1px;
    left: 50%;
    margin-left: -10px;
    @include transition(background-color 0.3s 0.3s);

    &::before,
    &::after {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      /* Force Hardware Acceleration in WebKit */
      @include transform(translateZ(0));
      -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
      will-change: transform;
      @include transition(transform 0.3s 0.3s);
    }

    &::before {
      @include transform(translateY(-6px));
    }

    &::after {
      @include transform(translateY(6px));
    }
  }
}

//.cd-main-nav {
//  position: fixed;
//  top: 0;
//  left: 0;
//  width: 100%;
//  height: 100vh;
//  padding: 50px 0;
//  text-align: center;
//  @include transform(translateY(-100%));
//  @include transition(transform 0.3s);

//  li a {
//    display: block;
//    font-size: 1.8rem;
//    padding: 1em 0;
//    border-bottom-width: 1px;
//    border-style: solid;
//  }

//  li:first-of-type a {
//    border-top-width: 1px;
//  }

//    li {
//      display: table-cell;
//      vertical-align: middle;
//      padding: 0 1em;
//    }
//
//    li a {
//      display: inline-block;
//      font-size: 1.6rem;
//      padding: 0.4em 0.2em;
//      border-bottom: none;
//      @include transition(all 0.2s);
//    }

//    li:first-of-type a {
//      border-top: none;
//    }
//  }

//  @include MQ(L) {
//    display: none;
//  }
//}

.nav-is-visible {
  .cd-nav-trigger span {
    &::before {
      @include transform(translateY(0) rotate(-45deg));
    }

    &::after {
      @include transform(translateY(0) rotate(45deg));
    }
  }

  .cd-main-nav {
    @include transform(translateY(0));
  }
}

.cd-download {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 80px;
  background-image: url("../assets/icon-download.svg");
  background-position: center center;
  background-repeat: no-repeat;
  display: none;
  @include transition(background-color 0.2s);

  span {
    /* tooltip */
    position: absolute;
    right: 120%;
    top: 50%;
    margin-top: -20px;
    width: 140px;
    height: 40px;
    line-height: 40px;
    white-space: nowrap;
    text-align: center;
    font-size: 1.2rem;
    -webkit-transition: opacity 0.2s 0s, visibility 0s 0.2s;
    -moz-transition: opacity 0.2s 0s, visibility 0s 0.2s;
    transition: opacity 0.2s 0s, visibility 0s 0.2s;

    &::before {
      /* right arrow */
      content: "";
      position: absolute;
      top: 12px;
      left: 100%;
      height: 0;
      width: 0;
      border-width: 8px;
      border-style: solid;
      border-top-color: transparent;
      border-bottom-color: transparent;
      border-right-color: transparent;
    }
  }

  .no-touch &:hover span {
    opacity: 1;
    visibility: visible;
    -webkit-transition: opacity 0.2s 0s, visibility 0s 0s;
    -moz-transition: opacity 0.2s 0s, visibility 0s 0s;
    transition: opacity 0.2s 0s, visibility 0s 0s;
  }

  @include MQ(L) {
    right: 5%;
  }
}

main {
  width: 90%;
  max-width: $display-max-width;
  margin: 0 auto;
  padding: 50px 0;

  > h1 {
    text-align: center;
    margin: 3em 0;
  }

  @include MQ(L) {
    max-width: none;
    padding: 120px 0 50px;

    > h1 {
      position: fixed;
      top: 0;
      left: 50%;
      height: 80px;
      line-height: 80px;
      width: 400px;
      margin: 0 0 0 -200px;
      font-size: 2.6rem;
      z-index: 20;
    }
  }
}

section {
  margin: 3em 0;
  @include clearfix;
  // HorseShoe
  &:nth-of-type(1) h2::before {
    background-image: url(https://freesvg.org/img/Raseone_Horseshoe.png);
    background-size: 50px 50px;
    position: absolute;
    top: 50%;
    left: -50%;
    display: inline-block;
    width: 50px;
    height: 50px;
    content: "";
  }

  &:nth-of-type(2) h2::before {
    content: "2. ";
  }

  &:nth-of-type(3) h2::before {
    content: "3. ";
  }

  &:nth-of-type(4) h2::before {
    content: "4. ";
  }

  &:nth-of-type(5) h2::before {
    content: "5. ";
  }

  &:nth-of-type(6) h2::before {
    content: "6. ";
  }

  &:nth-of-type(7) h2::before {
    content: "7. ";
  }
  &:nth-of-type(8) h2::before {
    content: "8. ";
  }
  &:nth-of-type(9) h2::before {
    content: "9. ";
  }
  &:nth-of-type(10) h2::before {
    content: "10. ";
  }

  //  @include MQ(L) {
  //    @include column(0.48);
  //    margin: 0 4% 4em 0;
  //
  //    &:nth-of-type(2n) {
  //      margin-right: 0;
  //    }
  //  }
}
/* ... */

